# github-release-tool

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat
github_release_tool/: __init__.py  cli.py  release.py  version.py
make.include/: common.mk  lint.mk  publish.mk  release.mk  requirements.mk  test.mk  version.mk
tests/: __init__.py  test_cli.py  test_release.py
tests/data/: README.md
