[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
requires_python = ">=3.8"

[project]
name = "github_release_tool"
authors = [{name = "Matt Krueger", email = "mkrueger@rstms.net"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["github api cli tool"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English", 
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10"
]
dynamic = ["version", "description"] 

dependencies = [
  "click",
  "github3.py"
]

[project.optional-dependencies]
dev = [
  "black",
  "bump2version",
  "coverage",
  "flake8",
  "pytest",
  "pdbpp",
  "python-box",
  "tox",
  "pytest-datadir"
]
docs = [
  "sphinx",
  "sphinx-click",
  "sphinx-rtd-theme"
]

[project.urls]
Home = "https://github.com/rstms/github-release-tool"
[tool.black]
line-length = 79

[tool.isort]
profile = "black"
[tool.pytest]
collect_ignore = ['setup.py']


[project.scripts]
release = "github_release_tool:cli"
